--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ nest-asyncio==1.6.0
 numpy==2.2.3
 opencv-python==4.11.0.86
 packaging==24.2
+pandas==2.2.3
 parso==0.8.4
 pexpect==4.9.0
 platformdirs==4.3.6
@@ -24,10 +25,12 @@ pure_eval==0.2.3
 Pygments==2.19.1
 PyMuPDF==1.25.3
 python-dateutil==2.9.0.post0
+pytz==2025.1
 pyzmq==26.3.0
 six==1.17.0
 stack-data==0.6.3
 tornado==6.4.2
 traitlets==5.14.3
 typing_extensions==4.12.2
+tzdata==2025.1
 wcwidth==0.2.13
